[project]
name = "upstreamdata.github.com"
version = "0.1.0"
description = "Documentation for Upstream Data Products"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "tomli-w>=1.0",
    "zensical (>=0.0.20,<0.0.21)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
